# django-chronos

./: LICENSE  README.md  justfile  pyproject.toml
src/django_chronos/: middleware.py
tests/: manage.py  settings.py  views.py
tests/templates/: index.html
